Modified some views

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -9,7 +9,7 @@
           %p Phone: +91 - 20 - 25539995
           %p
             Email:
-            %a.text-danger{:href => "javascript:;"} info@joshsoftware.com
+            %a.text-danger{encode: "hex", href: "mailto:info@joshsoftware.com?subject="} info@joshsoftware.com
       .col-lg-6.col-sm-6
         %h1 latest tweet
         .tweet-box
