changed style css

--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -36,7 +36,7 @@
                         - else
                           = stack
           .row
-            .col-lg-10.col-sm-10
+            .col-md-12
               %br
               /
                 %h1
