Removed unwanted links

--- a/app/views/static/testimonials.html.haml
+++ b/app/views/static/testimonials.html.haml
@@ -10,11 +10,9 @@
                 #{testimony[:endorser]}
               %ul.list-unstyled
                 %li
-                  %a{:href => "#"}
-                    %em #{testimony[:title]}
+                  #{testimony[:title]}
                 %li
-                  %a{:href => "#"}
-                    %em #{testimony[:company]}
+                  #{testimony[:company]}
             .col-lg-10.col-sm-10
               %blockquote
                 %p #{raw testimony[:endorsement]} 
