--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,11 +12,13 @@
  *= require others/theme.css
  *= require others/bootstrap-reset.css
  *= require font_awesome/font-awesome.css
+ *= require others/flexslider.css 
  *= require bxslider/jquery.bxslider.css
  *= require fancybox/jquery.fancybox.css
  *= require revolution_slider/rs-style.css
  *= require revolution_slider/settings.css
- *= require others/flexslider.css 
+ *= require superfish/superfish.css
+ *= require superfish/superfish-vertical.css
  *= require others/style.css
  *= require others/style-responsive.css
  *= require_self
