--- a/app/views/static/contact_us.html.haml
+++ b/app/views/static/contact_us.html.haml
@@ -1,6 +1,6 @@
 = render 'shared/breadcrumbs', data: nil
 .contact-map
-  #map-canvas{:style => "width: 100%; height: 400px"}
+  #map-canvas{:style => "width: 100%; height: 398px"}
 .container
   .row
     .contact-form
@@ -52,9 +52,10 @@
           .col-lg-6.col-md-offset-5
             %button.btn.btn-danger.btn-lg{:type => "submit"} Submit
 = raw '<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&AMP;sensor=false"></script>'
-= javascript_include_tag 'https://lct.salesforce.com/sfga.js'
-%script
-  __sfga()
+=# javascript_include_tag 'https://lct.salesforce.com/sfga.js'
+/
+  %script
+    __sfga()
 :javascript
   function initialize() {
       // use http://www.findlatitudeandlongitude.com/ to find lat long
