--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -4,7 +4,7 @@
     .col-lg-2
       .blog-side-item
         .category
-          %h3 Latest Projects
+          %h3 Recent Work
           %ul.list-unstyled
             - @projects.each do |project|
               %li
@@ -41,8 +41,7 @@
               /
                 %h1
                   = link_to project[:title], project[:url], target: '_blank'
-              %blockquote
-                %p= raw project[:description]
+              %p= raw project[:description]
       /
         .text-center
           %ul.pagination
