Fixed bug: all pages except home are blank

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -15,7 +15,7 @@
           %h1 latest tweet
           .tweet-box
             .container.text-left
-              #{@tweet[0]}
+              #{raw @tweet[0]}
             .container.text-right
               #{@tweet[1]}
           /
