--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -14,6 +14,7 @@
         - if @tweet.any?
           %h1 latest tweet
           .tweet-box
+            %i.icon-twitter
             .container.text-left
               #{raw @tweet[0]}
             .container.text-right
