Added placeholder for fun at josh

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -64,11 +64,11 @@
               %li
                 .about-testimonial-image
                   /%img{:alt => "", :src => "img/testimonial-img-1.jpg"}/
-                .about-testimonial-author{:href => "#"} Ericson Reagan
-                %span.about-testimonial-company ABC Realestate LLC
+                .about-testimonial-author{:href => "#"} Fun at JOSH
+                %span.about-testimonial-company Fun at JOSH
                 .about-testimonial-content
                   %p.about-testimonial-quote
-                    Pellentesque et pulvinar enim. Quisque at tempor ligula. Maecenas augue ante, euismod vitae egestas sit amet, accumsan eu nulla. Nullam tempor lectus a ligula lobortis pretium. Donec ut purus sed tortor malesuada venenatis eget eget lorem.
+                    Pictures here
 .parallax1
   .clients
     .container
