fixed the UI for responsiveness

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,7 +1,7 @@
 = render 'shared/breadcrumbs', data: nil
 .container
   .row
-    .col-lg-3
+    .col-lg-3.col-md-3.col-sm-3.col-xs-6
       .about-carousel
         #myCarousel.carousel.slide
           .carousel-inner
@@ -21,7 +21,7 @@
             %i.icon-angle-left
           %a.carousel-control.right{"data-slide" => "next", :href => "#myCarousel"}
             %i.icon-angle-right
-    .col-lg-9.about
+    .col-lg-9.col-md-9.col-sm-9.col-xs-12.about
       %p 
         Driven by enthusiasm and passion, Josh is India’s leading company in building innovative web applications working exclusively in 
         %span.text-danger Ruby On Rails
