--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,6 +1,6 @@
 = render 'shared/breadcrumbs', data: nil
 .container
-  .row
+  .row.well
     .col-lg-3.col-md-3.col-sm-3.col-xs-6
       .about-carousel
         #myCarousel.carousel.slide
