--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -104,7 +104,9 @@
 
   $(window).load(function() {
       $('.flexslider').flexslider({
-          animation: "slide",
+          animation: "slide", //slide or swing
+          slideshow: false, //automatic slideshow
+          reverse: false,
           start: function(slider) {
               $('body').removeClass('loading');
           }
