--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -35,7 +35,7 @@
         %a{href: "http://trello.com", target: '_blank'} Trello
         are some of the tools we use to ensure our clients are always happy!
 .container
-  .row
+  .row.well
     .col-lg-9.col-md-9.col-sm-9.col-xs-12
       .about-testimonial.boxed-style.about-flexslider
         %section.slider
@@ -50,7 +50,6 @@
                       #{testimonial[:endorsement]}
     .col-lg-3.col-md-3.col-sm-3.col-xs-9
       .about-testimonial
-        = image_tag 'glyphicons_273_drink.png', title: 'Fun at Josh'
         .about-testimonial-author Fun at JOSH
       #fun.align-center
         = image_tag 'loading.gif'
