Added porfolio data for QuikCompliance and KwikKopy. Modified the deployment script

--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -18,7 +18,7 @@
               %h1
                 = link_to project[:title], project[:url], target: '_blank'
             .col-lg-7
-              .blog-img
+              .blog-img.well
                 = image_tag "portfolio/#{project[:image]}"
             .col-lg-5
               /
