Made some changes on UI

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -68,7 +68,7 @@
             %a{href: 'portfolio/#Phalcomm'}
               = image_tag "client_logos/phalcomm_logo.png", class: 'logo_width'
           %li
-            %a{href: 'portfolio/#'}
+            %a{href: 'portfolio/#QwikCompliance'}
               = image_tag "client_logos/qwikc_logo.png", class: 'logo_width'
           %li
             %a{href: 'portfolio/#TourConnect'}
