fixed bug: altizon logo does not take to altizon profile

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -59,7 +59,7 @@
       .col-lg-12.text-center
         %ul.list-unstyled
           %li
-            %a{href: 'portfolio/#Altizon'}
+            %a{href: 'portfolio/#Altizon Datonis'}
               = image_tag "client_logos/altizon_logo.png", class: 'logo_width'
           %li
             %a{href: 'portfolio/#Educade'}
