--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -7,10 +7,10 @@
           .carousel-inner
             .item.active
               %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}
-                = image_tag "ruby_and_mongodb_book.jpg", :alt => "Ruby and MongoDB Web Development"
+                = image_tag "ruby_and_mongodb_book.jpg", alt: "Ruby and MongoDB Web Development"
             .item
               %a{:href => "http://www.packtpub.com/learning-mongoid/book", :target => "_blank"}
-                = image_tag "learning_mongoid_book.jpg", :alt => "Learning Mongoid"
+                = image_tag "learning_mongoid_book.jpg", alt: "Learning Mongoid"
           %a.carousel-control.left{"data-slide" => "prev", :href => "#myCarousel"}
             %i.icon-angle-left
           %a.carousel-control.right{"data-slide" => "next", :href => "#myCarousel"}
